<resources>
    <string name="app_name">Audio Amateur</string>
    <string name="more_detail">Detail</string>
    <string name="contact_seller">Contact</string>
    <string name="headphone_name_dummy">Beyerdynamics DT770 Pro</string>
    <string name="headphone_type_dummy">Closed-back headphone</string>
    <string name="headphone_price_dummy">$199.99</string>
    <string name="list_of_headphone">List of Headphone</string>
    <string name="about_me">About Me</string>
    <string name="data_received">Data Received</string>
    <string name="headphone_dummy_price">$499.00</string>
    <string name="headphone_detail_dummy">This is the detail</string>
    <string name="contact">Contact Seller</string>
    <string name="my_name">Michael Ricky</string>
    <string name="my_email">a0040304@bangkit.academy</string>
    <string name="my_blog">My Blog</string>
</resources>